# KnapSaC

./: .gitignore  Cargo.toml  generate_man.sh  man.txt
src/: dependency.rs  entry.rs  library.rs  main.rs  module.rs  new_options.rs  options.rs  package.rs  registry.rs  util.rs
src/input/: boolean.rs  mod.rs  natural_number.rs
src/subcommands/: add.rs  add_dependency.rs  executable.rs  get.rs  initialize.rs  mark_as_module.rs  mod.rs  module.rs  package.rs  remove.rs  search.rs
src/subcommands/add/: dependency.rs  mod.rs  module.rs
src/subcommands/dependencies/: get.rs  has.rs  mod.rs
src/subcommands/dependencies/add/: mod.rs  standalone_module.rs  stray_module.rs
src/subcommands/executable/: add.rs  add_dependency.rs  get_dependency.rs  mod.rs  remove.rs
src/subcommands/get/: dependency.rs  mod.rs  module.rs
src/subcommands/has/: by_id.rs  by_source.rs  mod.rs
src/subcommands/module/: add.rs  add_dependency.rs  get.rs  get_dependency.rs  mod.rs  remove.rs
src/subcommands/package/: build.rs  create.rs  mod.rs  publish.rs  upload.rs
src/subcommands/remove/: mod.rs  module.rs
