[package]
name = "knapsac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive", "env"] }
url = "2"
knapsac_lib = { path = "/Users/job/GitRepositories/KnapSaC-lib", version = "0.1" }